# pretalx-invitation-sender

./: README.md  pyproject.toml
pretalx_invitation_sender/: MANIFEST.in  __init__.py  apps.py  forms.py  init.py  signals.py  urls.py  views.py
pretalx_invitation_sender/templates/pretalx_invitation_sender/: send_form.html
